--- a/app/views/create-project.html
+++ b/app/views/create-project.html
@@ -1,13 +1,28 @@
-<div layout="column" class="md-form" layout-align="center">
-		<md-input-container>
-		  <label>Name</label>
-		  <input ng-model="project.name"/>
-		</md-input-container>
-		<md-input-container class="md-block">
-      <label>Description</label>
-      <textarea ng-model="project.description" md-maxlength="500" rows="5" md-select-on-focus></textarea>
-    </md-input-container>
-		<md-button class="md-raised md-primary" type="submit" ng-click="reset()">Effacer</md-button>
-		<md-button class="md-raised md-primary" type="submit" ng-click="create(project)">Créer</md-button>
-		<md-button class="md-raised md-primary" type="submit" ng-click="backProjects()">Retour aux projets</md-button>
+<div layout="row">
+	<md-sidenav
+			class="md-sidenav-left"
+			md-component-id="left"
+			md-is-locked-open="$mdMedia('gt-md')"
+			md-whiteframe="4"
+			flex
+			>
+			<md-toolbar class="md-hue-3">
+	      <h3 class="md-toolbar-tools">{{connectedUser}}</h1>
+	    </md-toolbar>
+			<md-button ng-click="backProjects()">Retour aux projets</md-button>
+
+	</md-sidenav>
+
+	<div flex layout="column" class="md-form" layout-align="center">
+			<md-input-container>
+			  <label>Name</label>
+			  <input ng-model="project.name"/>
+			</md-input-container>
+			<md-input-container class="md-block">
+	      <label>Description</label>
+	      <textarea ng-model="project.description" md-maxlength="500" rows="5" md-select-on-focus></textarea>
+	    </md-input-container>
+			<md-button class="md-primary" type="submit" ng-click="reset()">Effacer</md-button>
+			<md-button class="md-raised md-primary" type="submit" ng-click="create(project)">Créer</md-button>
+	</div>
 </div>
