--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -5,20 +5,22 @@
 		md-component-id="left"
 		md-is-locked-open="$mdMedia('gt-md')"
 		md-whiteframe="4"
+		flex
 		>
-		<md-toolbar class="md-theme-indigo">
-      <h3 class="md-toolbar-tools">{{user}}</h1>
+		<md-toolbar class="md-hue-3">
+      <h3 class="md-toolbar-tools">{{connectedUser}}</h1>
     </md-toolbar>
-		<md-button ng-click="create()" class="md-raised md-primary">Créer un projet</md-button>
+		<md-button ng-click="create()">Créer un projet</md-button>
 
 </md-sidenav>
 
 <md-list flex>
-  <md-subheader class="md-no-sticky">Mes Projets</md-subheader>
-  <md-list-item class="md-3-line" ng-repeat="project in projects" ng-click="null">
-    <div class="md-list-item-text" layout="column">
+  <md-subheader class="md-no-sticky">Tous les Projets</md-subheader>
+  <md-list-item class="md-3-line" ng-repeat="project in projects">
+    <div ng-click="openProject(project._id)" class="md-list-item-text" layout="column">
       <h3>{{project.name}}</h3>
-      <h4>{{project.description}}</h4>
+      <h4><label>Propriétaire</label>: {{getUser(project.owner)}}</h4>
+			<p>{{project.description}}</p>
     </div>
   </md-list-item>
 </md-list>
