feat(chat): add sidebar

--- a/app/views/create-project.html
+++ b/app/views/create-project.html
@@ -6,7 +6,7 @@
 			md-whiteframe="4"
 			flex
 			>
-			<md-toolbar class="md-hue-3">
+			<md-toolbar class="md-theme-light">
 	      <h3 class="md-toolbar-tools">{{connectedUser}}</h1>
 	    </md-toolbar>
 			<md-button ng-click="backProjects()">Retour aux projets</md-button>
