--- a/app/views/project.html
+++ b/app/views/project.html
@@ -6,14 +6,31 @@
 			md-whiteframe="4"
 			flex
 			>
-			<md-toolbar class="md-hue-3">
+			<md-toolbar class="md-theme-light">
 	      <h3 class="md-toolbar-tools">{{user}}</h1>
 	    </md-toolbar>
 			<md-button ng-click="backProjects()">Retour aux projets</md-button>
-
+      <md-button ng-click="toggleRight()"> Chatter </md-button>
 	</md-sidenav>
 	<md-content layout-padding flex>
 	  <h3>{{project.name}}</h3>
 	  <p>{{project.description}}</p>
 	</md-content>
+  <md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right" flex>
+    <md-toolbar class="md-theme-light">
+      <h1 class="md-toolbar-tools">Chat</h1>
+    </md-toolbar>
+    <md-content layout-padding>
+      <form>
+        <md-input-container>
+          <label>Test input</label>
+          <input type="text" md-autofocus>
+        </md-input-container>
+      </form>
+      <!-- <md-button ng-click="close()" class="md-primary">
+        Close Sidenav Right
+      </md-button> -->
+    </md-content>
+
+  </md-sidenav>
 </div>
