--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -7,7 +7,7 @@
 		md-whiteframe="4"
 		flex
 		>
-		<md-toolbar class="md-hue-3">
+		<md-toolbar class="md-theme-light">
       <h3 class="md-toolbar-tools">{{connectedUser}}</h1>
     </md-toolbar>
 		<md-button ng-click="create()">Créer un projet</md-button>
