--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,24 +1,16 @@
+<div ng-include src="'views/header.html'"></div>
 <div layout="row" style="height:500px;">
-	<md-sidenav
-			class="md-sidenav-left"
-			md-component-id="left"
-			md-is-locked-open="$mdMedia('gt-md')"
-			md-whiteframe="4"
-			flex
-			>
-			<md-toolbar class="md-theme-light">
-	      <h3 class="md-toolbar-tools">{{user}}</h1>
-	    </md-toolbar>
-			<md-button ng-click="backProjects()">Retour aux projets</md-button>
-      <md-button ng-click="toggleRight()"> Chatter </md-button>
-	</md-sidenav>
 	<md-content layout-padding flex>
 	  <h3>{{project.name}}</h3>
 	  <p>{{project.description}}</p>
 	</md-content>
   <md-sidenav  class="md-sidenav-right md-whiteframe-4dp" md-component-id="right" flex>
     <md-toolbar class="md-theme-light">
-      <h1 class="md-toolbar-tools">Chat</h1>
+      <h1 class="md-toolbar-tools">
+				<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+				  <path fill="#000000" d="M9,22A1,1 0 0,1 8,21V18H4A2,2 0 0,1 2,16V4C2,2.89 2.9,2 4,2H20A2,2 0 0,1 22,4V16A2,2 0 0,1 20,18H13.9L10.2,21.71C10,21.9 9.75,22 9.5,22V22H9M10,16V19.08L13.08,16H20V4H4V16H10Z" />
+				</svg>
+			</h1>
     </md-toolbar>
     <md-content layout-padding layout="column" layout-align="center">
 			<div layout="column" class="md-form" flex="25">
