--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -5,9 +5,22 @@
 	  <md-list-item class="md-3-line" ng-repeat="project in projects">
 	    <div ng-click="openProject(project._id)" class="md-list-item-text" layout="column">
 	      <h3>{{project.name}}</h3>
-	      <h4><label>Propriétaire</label>: {{getUser(project.owner)}}</h4>
+	      <!-- <h4><label>Propriétaire</label>: {{getUser(project.owner)}}</h4> -->
 				<p>{{project.description}}</p>
 	    </div>
 	  </md-list-item>
 	</md-list>
+	<md-button
+		flex
+		aria-label="Project creation fab"
+		ng-click="showCreate($event)"
+		class="md-fab md-fab-bottom-right docs-scroll-fab md-button md-ink-ripple scrolling"
+		docs-scroll-class="scrolling"
+		style="position:fixed;">
+		<md-icon>
+			<svg style="width:24px;height:24px;" viewBox="0 0 24 24">
+				<path fill="#FFFFFF" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
+			</svg>
+		</md-icon>
+	</md-button>
 </div>
