--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -2,8 +2,9 @@
 <div layout="row">
 	<md-list flex>
 	  <md-subheader class="md-no-sticky">Tous les Projets</md-subheader>
-	  <md-list-item class="md-3-line" ng-repeat="project in projects">
-	    <div ng-click="openProject(project._id)" class="md-list-item-text" layout="column">
+		<md-divider/>
+	  <md-list-item class="md-3-line" ng-repeat="project in projects" ng-click="openProject(project._id)" >
+	    <div class="md-list-item-text" layout="column" style="padding:15px;">
 	      <h3>{{project.name}}</h3>
 	      <!-- <h4><label>Propriétaire</label>: {{getUser(project.owner)}}</h4> -->
 				<p>{{project.description}}</p>
