feat(project): join project

--- a/app/views/create-project.html
+++ b/app/views/create-project.html
@@ -17,7 +17,7 @@
     <md-dialog-content style="padding:20px;">
       <div class="md-dialog-content">
 				<md-input-container>
-					<label>Name</label>
+					<label>Nom</label>
 					<input ng-model="project.name"/>
 				</md-input-container>
 				<md-input-container class="md-block">
