--- a/app/views/header.html
+++ b/app/views/header.html
@@ -24,5 +24,13 @@
 			</svg>
 			</md-icon>
     </md-button>
+		<md-button ng-if="showEditProfile" ng-click="editProfile()">
+      <md-icon>
+				<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+					<path fill="#FFFFFF" d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" />
+				</svg>
+			</md-icon>
+    </md-button>
+
 	</md-toolbar>
 </header>
