--- a/app/views/edit-project.html
+++ b/app/views/edit-project.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="Create project" style="min-width:75%;">
+<md-dialog aria-label="Edit project" style="min-width:75%;">
   <form ng-cloak>
     <md-toolbar>
       <div class="md-toolbar-tools">
@@ -17,7 +17,7 @@
     <md-dialog-content style="padding:20px;">
       <div class="md-dialog-content">
 				<md-input-container>
-					<label>Name</label>
+					<label>Nom</label>
 					<input ng-model="project.name"/>
 				</md-input-container>
 				<md-input-container class="md-block">
