--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,8 +1,22 @@
 <div ng-include src="'views/header.html'"></div>
-<div layout="row" style="height:500px;">
-	<md-content layout-padding flex>
-	  <h3>{{project.name}}</h3>
-	  <p>{{project.description}}</p>
+<div layout="row" style="height:700px;">
+	<md-content  layout="columns" layout-padding flex>
+		<div flex>
+		  <h3>{{project.name}}</h3>
+		  <p>{{project.description}}</p>
+			<md-button class="md-raised md-primary" ng-if="notJoin()" type="submit" ng-click="joinProject()">Rejoindre</md-button>
+		</div>
+		<div flex>
+			<md-list >
+			  <md-subheader class="md-no-sticky">Participants</md-subheader>
+				<md-divider/>
+			  <md-list-item class="md-3-line" ng-repeat="participant in participants" ng-click="null" >
+			    <div class="md-list-item-text" layout="column" style="padding:15px;">
+			      <h3>{{users | user:participant}}</h3>
+			    </div>
+			  </md-list-item>
+			</md-list>
+		</div>
 	</md-content>
   <md-sidenav  class="md-sidenav-right md-whiteframe-4dp" md-component-id="right" flex>
     <md-toolbar class="md-theme-light">
