--- a/app/views/project.html
+++ b/app/views/project.html
@@ -3,14 +3,19 @@
 	<md-content  layout="columns" layout-padding flex>
 		<div flex>
 		  <h3>{{project.name}}</h3>
-		  <p>{{project.description}}</p>
+			<p>{{project.description}}</p>
 			<md-button class="md-raised md-primary" ng-if="notJoin()" type="submit" ng-click="joinProject()">Rejoindre</md-button>
+			<div map-lazy-load="https://maps.google.com/maps/api/js">
+				<ng-map center="{{coords.lat}}, {{coords.long}}" zoom="10">
+   				<marker position="[{{coords.lat}}, {{coords.long}}]" on-click="myfunc()"></marker>
+				</ng-map>
+			</div>
 		</div>
 		<div flex>
 			<md-list >
 			  <md-subheader class="md-no-sticky">Participants</md-subheader>
 				<md-divider/>
-			  <md-list-item class="md-3-line" ng-repeat="participant in participants" ng-click="null" >
+			  <md-list-item class="md-3-line" ng-repeat="participant in participants">
 			    <div class="md-list-item-text" layout="column" style="padding:15px;">
 			      <h3>{{users | user:participant}}</h3>
 			    </div>
