--- a/app/views/project.html
+++ b/app/views/project.html
@@ -7,7 +7,12 @@
 			<md-button class="md-raised md-primary" ng-if="notJoin()" type="submit" ng-click="joinProject()">Rejoindre</md-button>
 			<div map-lazy-load="https://maps.google.com/maps/api/js">
 				<ng-map center="{{coords.lat}}, {{coords.long}}" zoom="10">
-   				<marker position="[{{coords.lat}}, {{coords.long}}]" on-click="myfunc()"></marker>
+					<custom-marker ng-repeat="participant in participants" position="{{users | userCoord:participant}}">
+						<!-- Ajouter le nom de la personne + CSS -->
+						<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+							<path fill="#000000" d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z" />
+						</svg>
+					</custom-marker>
 				</ng-map>
 			</div>
 		</div>
